Add compose include to reduce differentiation

--- a/.devcontainer/ros2-codespace/compose.yml
+++ b/.devcontainer/ros2-codespace/compose.yml
@@ -1,17 +1,9 @@
+include:
+  - path : 
+    - ../ros2/compose.yml
+    - override.yml
+
 services:
-  ros-dev:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - ../.:/workspace
-    command: sleep infinity
-    environment:
-      - DISPLAY=vnc:0.0
-    depends_on:
-      - vnc
-    networks:
-      - x11
   vnc:
     image: theasp/novnc:latest
     environment:
