Remove duplicate network definition

--- a/.devcontainer/ros2-codespace/override.yml
+++ b/.devcontainer/ros2-codespace/override.yml
@@ -1,3 +1,4 @@
+# override.yml
 services:
   ros-dev:
     build:
@@ -10,5 +11,3 @@ services:
       - vnc
     networks:
       - x11
-networks:
-  x11:
