--- a/.devcontainer/ros2-codespace/override.yml
+++ b/.devcontainer/ros2-codespace/override.yml
@@ -6,14 +6,9 @@ services:
       dockerfile: Dockerfile
     command: sleep infinity
     environment:
+      - SSH_KEY=${SSH_KEY}
       - DISPLAY=vnc:0.0
     depends_on:
       - vnc
     networks:
       - x11
-    secrets:
-      - ssh-key
-
-secrets:
-  ssh-key:
-    file: /non-existing-file
