--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -7,18 +7,13 @@ RUN apt-get update && \
 
 # Create a non-root user called "developer" with sudo privileges
 RUN useradd -m -s /bin/bash developer && \
-    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
-
-# Ensure /home/developer/.ssh directory exists and add SSH configuration
-RUN mkdir -p /home/developer/.ssh && \
-    chown developer:developer /home/developer/.ssh && \
-    echo "Host github.com" >> /home/developer/.ssh/config && \
-    echo "  IdentityFile /run/secrets/ssh-key" >> /home/developer/.ssh/config
+    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers 
 
 RUN echo "#!/bin/bash" >> /post-create-script.sh && \
     echo "sudo chown -R developer:developer ." >> /post-create-script.sh && \
     echo "rosdep update && sudo rosdep install --from-paths src --ignore-src -y"  >> /post-create-script.sh && \
     echo "echo 'source /opt/ros/humble/setup.bash' >> ~/.bashrc" >> /post-create-script.sh && \
-    echo "source /opt/ros/humble/setup.bash" >> /post-create-script.sh
+    echo "source /opt/ros/humble/setup.bash" >> /post-create-script.sh && \
+    echo "echo '$SSH_KEY' > /home/developer/.ssh/id_rsa && chmod 600 /home/developer/.ssh/id_rsa" >> /post-create-script.sh
 
 USER developer
