--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -9,11 +9,15 @@ RUN apt-get update && \
 RUN useradd -m -s /bin/bash developer && \
     echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers 
 
+RUN mkdir -p /home/developer
+
 RUN echo "#!/bin/bash" >> /post-create-script.sh && \
-    echo "sudo chown -R developer:developer ." >> /post-create-script.sh && \
+    echo "sudo chown -R developer:developer /home/developer" >> /post-create-script.sh && \
     echo "rosdep update && sudo rosdep install --from-paths src --ignore-src -y"  >> /post-create-script.sh && \
     echo "echo 'source /opt/ros/humble/setup.bash' >> ~/.bashrc" >> /post-create-script.sh && \
     echo "source /opt/ros/humble/setup.bash" >> /post-create-script.sh && \
-    echo "echo '$SSH_KEY' > /home/developer/.ssh/id_rsa && chmod 600 /home/developer/.ssh/id_rsa" >> /post-create-script.sh
+    echo "echo -e \"\$SSH_KEY\" > /home/developer/.ssh/id_rsa && chmod 600 /home/developer/.ssh/id_rsa" >> /post-create-script.sh
+
+RUN chmod +x /post-create-script.sh
 
 USER developer
