--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,10 +31,15 @@ jobs:
       # Build the specific stage of the multi-stage Dockerfile
       - uses: actions/checkout@v3
       
+      - name: Set Docker repository name
+        id: set_docker_repo_name
+        run: echo "::set-output name=docker_repo_name::$(echo ${GITHUB_REPOSITORY#*/} | tr '[:upper:]' '[:lower:]')"
+        
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:$(date +"%Y%m%d%H%M%S") .devcontainer/ros2/.
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:$(date +"%Y%m%d%H%M%S") .devcontainer/ros2/.
         
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:$(date +"%Y%m%d%H%M%S")
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:$(date +"%Y%m%d%H%M%S")
+
