--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,3 +1,4 @@
+
 name: Docker Image CI
 
 on:
@@ -33,17 +34,12 @@ jobs:
       
       - name: Set Docker repository name
         id: set_docker_repo_name
-        run: echo "docker_repo_name=$(echo ${GITHUB_REPOSITORY#*/} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUTS
+        run: echo "::set-output name=docker_repo_name::$(echo ${GITHUB_REPOSITORY#*/} | tr '[:upper:]' '[:lower:]')"
         
-      - name: Generate timestamp
-        id: timestamp
-        run: echo "timestamp=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_OUTPUTS
-
       - name: Build Docker image
-        run: docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest" -t "${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:${{ steps.timestamp.outputs.timestamp }}" .devcontainer/ros2/.
-
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:$(date +"%Y%m%d%H%M%S") .devcontainer/ros2/.
+        
       - name: Push Docker image
         run: |
-          docker push "${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest"
-          docker push "${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:${{ steps.timestamp.outputs.timestamp }}"
-       
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ steps.set_docker_repo_name.outputs.docker_repo_name }}:$(date +"%Y%m%d%H%M%S")
