--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -1,8 +1,6 @@
 services:
   ros-dev:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: rishikesavanramesh/ros2-dev
     volumes:
       - ../../.:/workspace/.
       - /tmp/.X11-unix:/tmp/.X11-unix # Expose X11 socket
