--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -1,6 +1,6 @@
 services:
   ros-dev:
-    image: $PROJECT_DOCKER_IMAGE
+    image: rishikesavanramesh/ros2-dev # change this to your docker image
     volumes:
       - ../../.:/workspace/.
       - /tmp/.X11-unix:/tmp/.X11-unix # Expose X11 socket
