--- a/.devcontainer/ros2-windows/devcontainer.json
+++ b/.devcontainer/ros2-windows/devcontainer.json
@@ -1,4 +1,4 @@
-{
+ {
 	"name": "ros-dev-windows",
 	"remoteUser": "developer",
 	"dockerComposeFile": ["compose.yml"],
@@ -19,7 +19,8 @@
 				"eamodio.gitlens",
 				"ms-iot.vscode-ros",
 				"ms-azuretools.vscode-docker",
-				"ms-vscode.cmake-tools"
+				"ms-vscode.cmake-tools",
+				"redhat.vscode-xml"
 			]
 		}
 	},
