--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -1,20 +1,13 @@
 FROM ros:humble
 
-ARG USERNAME=developer
-ARG USER_GID=1000
-ARG USER_UID=1000
-
 # Install sudo
 RUN apt-get update &&\
     apt-get install -y sudo openssh-client && \
     rm -rf /var/lib/apt/lists/*
 
 # Create a non-root user called "developer" with sudo privileges
-RUN groupadd --gid ${USER_GID} ${USERNAME} \
-    && useradd --uid ${USER_UID} --gid ${USER_GID} -m ${USERNAME} \
-    && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
-    && chmod 0440 /etc/sudoers.d/${USERNAME} \
-    && chown -R ${USERNAME}:${USERNAME} /home/${USERNAME}
+RUN useradd -m -s /bin/bash developer && \
+    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers 
 
 RUN mkdir -p /home/developer/.ssh
 
