--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -7,13 +7,14 @@ RUN apt-get update &&\
 
 # Create a non-root user called "developer" with sudo privileges
 RUN useradd -m -s /bin/bash developer && \
-    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers 
+    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
+    chown -R developer:developer /home/developer
 
 RUN mkdir -p /home/developer/.ssh
 
 RUN echo "#!/bin/bash" >> /post-create-script.sh && \
-    echo "sudo chown -R developer:developer /home/developer" >> /post-create-script.sh && \
-    echo "rosdep update && sudo rosdep install --from-paths src --ignore-src -y"  >> /post-create-script.sh && \
+    echo "sudo apt update -y" >> /post-create-script.sh && \
+    echo "rosdep update "  >> /post-create-script.sh && \
     echo "echo 'source /opt/ros/humble/setup.bash' >> ~/.bashrc" >> /post-create-script.sh && \
     echo "source /opt/ros/humble/setup.bash" >> /post-create-script.sh && \
     echo "echo 'source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash' >> ~/.bashrc" >> /post-create-script.sh && \
@@ -22,14 +23,7 @@ RUN echo "#!/bin/bash" >> /post-create-script.sh && \
 
 RUN chmod +x /post-create-script.sh
 
-RUN apt-get update && \
-    apt-get install -y tmate \
-    ros-humble-joint-state-publisher-gui \ 
-    ros-humble-xacro \ 
-    ros-humble-ros-gz \
-    ros-humble-ros2-control \
-    ros-humble-ros2-controllers \
-    ros-humble-moveit 
+
 
 USER developer
 
