--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update &&\
 
 # Create a non-root user called "developer" with sudo privileges
 RUN useradd -m -s /bin/bash developer && \
-    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
+    echo "developer ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
     chown -R developer:developer /home/developer
 
 RUN mkdir -p /home/developer/.ssh
