--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -4,11 +4,9 @@ services:
     build: .
     volumes:
       - ../../.:/workspace/.:rw
-      - /tmp/.X11-unix:/tmp/.X11-unix:rw # Expose X11 socket
-      - ${XAUTHORITY:-$HOME/.Xauthority}:/home/developer/.Xauthority # Mount Xauthority file
+      - /tmp/.X11-unix:/tmp/.X11-unix # Expose X11 socket
     environment:
       - SSH_KEY=$SSH_KEY
-      - DISPLAY=${DISPLAY}
-      - XAUTHORITY=/home/developer/.Xauthority # Set Xauthority file path
+      - DISPLAY=:45
     command: sleep infinity
     user: developer
