Refactor README.md Dockerfile

--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -1,9 +1,11 @@
 FROM ros:humble
 
-# Install sudo
-RUN apt-get update &&\
-    apt-get install -y sudo openssh-client && \
-    rm -rf /var/lib/apt/lists/*
+# # Install sudo
+RUN <<EOF
+apt-get update 
+apt-get install -y sudo openssh-client 
+rm -rf /var/lib/apt/lists/*
+EOF
 
 # Create a non-root user called "developer" with sudo privileges
 RUN useradd -m -s /bin/bash developer && \
@@ -12,29 +14,22 @@ RUN useradd -m -s /bin/bash developer && \
 
 RUN mkdir -p /home/developer/.ssh
 
-RUN echo "#!/bin/bash" >> /post-create-script.sh && \
-    echo "sudo apt update -y" >> /post-create-script.sh && \
-    echo "rosdep update "  >> /post-create-script.sh && \
-    echo "sudo chmod +x /workspace/*.sh"  >> /post-create-script.sh && \
-    echo "echo 'source /opt/ros/humble/setup.bash' >> ~/.bashrc" >> /post-create-script.sh && \
-    echo "source /opt/ros/humble/setup.bash" >> /post-create-script.sh && \
-    echo "echo 'source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash' >> ~/.bashrc" >> /post-create-script.sh && \
-    echo "source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash" >> /post-create-script.sh && \
-    echo "echo -e \"\$SSH_KEY\" > /home/developer/.ssh/id_rsa && chmod 600 /home/developer/.ssh/id_rsa" >> /post-create-script.sh
+COPY <<EOF /post-create-script.sh
+#!/bin/bash
+
+sudo apt update -y
+rosdep update
+sudo chmod +x /workspace/*.sh
+echo 'source /opt/ros/humble/setup.bash' >> ~/.bashrc
+source /opt/ros/humble/setup.bash
+echo 'source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash' >> ~/.bashrc
+source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash
+echo -e "\$SSH_KEY" > /home/developer/.ssh/id_rsa && chmod 600 /home/developer/.ssh/id_rsa
+EOF
+
 
 RUN chmod +x /post-create-script.sh
 
-
-
 USER developer
-
-# RUN pip install pyserial
-# install tmate
-# apt-get install openscad meshlab
-# pip install onshape-to-robot
-
-# export ONSHAPE_API=https://cad.onshape.com
-# export ONSHAPE_ACCESS_KEY=Your_Access_Key
-# export ONSHAPE_SECRET_KEY=Your_Secret_Key
 
 
