--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -9,14 +9,20 @@ services:
     environment:
       - SSH_KEY=$SSH_KEY
       - DISPLAY=:45 # ( see https://gist.github.com/RishikesavanRamesh/d8c085c958bc11e8562cd3db297e4eb8 )
+      
+      - FASTDDS_DEFAULT_PROFILES_FILE=/fastrtps_default_profiles.xml
+      - RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+      - RMW_FASTRTPS_USE_QOS_FROM_XML=1
     command: sleep infinity
     user: developer
-    security_opt:
+
+    security_opt: # should only be used in developement 
       - seccomp:unconfined
     cap_add:
       - SYS_PTRACE
+
     device_cgroup_rules: # (ref https://www.kernel.org/doc/Documentation/admin-guide/devices.txt )
       # first THREE of each of the following types of devices can be used inside the dev container
       - 'c 13:[012] rwm' # Input core ( here joystick only)
       - 'c 16[67]:[012] rwm' # ACM USB modems & its alternate devices
-      - 'c 18[89]:[012] rwm' # USB serial converters & its alternate devices  
+      - 'c 18[89]:[012] rwm' # USB serial converters & its alternate devices    
