--- a/.devcontainer/ros2-codespace/devcontainer.json
+++ b/.devcontainer/ros2-codespace/devcontainer.json
@@ -7,7 +7,7 @@
 	
 
 	"shutdownAction": "stopCompose",
-	"workspaceFolder": "/workspace/",
+	"workspaceFolder": "/home/developer",
 
 	"customizations": {
 		"vscode": {
@@ -19,7 +19,10 @@
 				"eamodio.gitlens",
 				"ms-iot.vscode-ros",
 				"ms-azuretools.vscode-docker",
-				"ms-vscode.cmake-tools"
+				"ms-vscode.cmake-tools",
+				"eclipse-cdt.vscode-trace-extension",
+				"eclipse-cdt.vscode-trace-server",
+				"redhat.vscode-xml"
 			]
 		}
 	},
