--- a/.devcontainer/ros2-windows/devcontainer.json
+++ b/.devcontainer/ros2-windows/devcontainer.json
@@ -7,7 +7,7 @@
 	
 
 	"shutdownAction": "stopCompose",
-	"workspaceFolder": "/workspace/",
+	"workspaceFolder": "/home/developer",
 
 	"customizations": {
 		"vscode": {
@@ -20,6 +20,8 @@
 				"ms-iot.vscode-ros",
 				"ms-azuretools.vscode-docker",
 				"ms-vscode.cmake-tools",
+				"eclipse-cdt.vscode-trace-extension",
+				"eclipse-cdt.vscode-trace-server",
 				"redhat.vscode-xml"
 			]
 		}
