--- a/.devcontainer/ros2/devcontainer.json
+++ b/.devcontainer/ros2/devcontainer.json
@@ -7,7 +7,7 @@
 	
 
 	"shutdownAction": "stopCompose",
-	"workspaceFolder": "/workspace/",
+	"workspaceFolder": "/home/developer",
 
 	"customizations": {
 		"vscode": {
@@ -21,7 +21,8 @@
 				"ms-azuretools.vscode-docker",
 				"ms-vscode.cmake-tools",
 				"eclipse-cdt.vscode-trace-extension",
-				"eclipse-cdt.vscode-trace-server"
+				"eclipse-cdt.vscode-trace-server",
+				"redhat.vscode-xml"
 			]
 		}
 	},
