--- a/.devcontainer/ros2-codespace/devcontainer.json
+++ b/.devcontainer/ros2-codespace/devcontainer.json
@@ -7,7 +7,7 @@
 	
 
 	"shutdownAction": "stopCompose",
-	"workspaceFolder": "/home/developer",
+	"workspaceFolder": "/workspace",
 
 	"customizations": {
 		"vscode": {
