--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,4 +147,15 @@
         ".devcontainer/devcontainer.json"
     ],
     "ament-task-provider.envSetup": "source /opt/ros/humble/setup.bash",
+    "terminal.integrated.defaultProfile.linux": "Sourced TMUX",
+     "terminal.integrated.profiles.linux": {
+        "Empty TMUX": {
+          "path": "bash",
+          "args": ["/workspace/.scripts/attach-empty-tmux.bash"],
+        },
+        "Sourced TMUX": {
+          "path": "bash",
+          "args": ["/workspace/.scripts/attach-sourced-tmux.bash"],
+        }
+      }
 }
