--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,11 +84,11 @@
         "variant": "cpp"
     },
     "python.analysis.extraPaths": [
-        "/opt/ros/humble/lib/python3.10/site-packages/"
+        "/opt/ros/jazzy/lib/python3.12/site-packages/"
     ],
     // Autocomplete from ros python packages
     "python.autoComplete.extraPaths": [
-        "/opt/ros/humble/lib/python3.10/site-packages/"
+        "/opt/ros/jazzy/lib/python3.12/site-packages/"
     ],
     // Environment file lets vscode find python files within workspace
     "python.envFile": "${workspaceFolder}/.env",
@@ -99,7 +99,7 @@
     ],
     "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
     "C_Cpp.formatting": "disabled",
-    "uncrustify.configPath.linux": "/opt/ros/humble/lib/python3.10/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
+    "uncrustify.configPath.linux": "/opt/ros/jazzy/lib/python3.12/site-packages/ament_uncrustify/configuration/ament_code_style_0_72.cfg",
     "[cpp]": {
         "editor.defaultFormatter": "zachflower.uncrustify"
     },
@@ -146,7 +146,7 @@
         ".vscode-insiders",
         ".devcontainer/devcontainer.json"
     ],
-    "ament-task-provider.envSetup": "source /opt/ros/humble/setup.bash",
+    "ament-task-provider.envSetup": "source /opt/ros/jazzy/setup.bash",
     "terminal.integrated.defaultProfile.linux": "Sourced TMUX",
     "terminal.integrated.profiles.linux": {
         "Empty TMUX": {
