--- a/.devcontainer/ros2/devcontainer.json
+++ b/.devcontainer/ros2/devcontainer.json
@@ -1,14 +1,18 @@
 {
 	"name": "ros-dev",
-	"remoteUser": "developer",
-	"dockerComposeFile": ["compose.yml"],
+	"remoteUser": "developersilver",
+	"dockerComposeFile": [
+		"compose.yml"
+	],
 	"service": "ros-dev",
-	"runServices": ["ros-dev"],
-	
-
+	"runServices": [
+		"ros-dev"
+	],
 	"shutdownAction": "stopCompose",
 	"workspaceFolder": "/workspace",
-
+	"features": {
+		"ghcr.io/rishikesavanramesh/devcontainer-features/create-remote-user:latest": {}
+	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
