--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -25,6 +25,15 @@ apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
 
+RUN <<EOF
+echo "deb [trusted=yes] https://download.eclipse.org/zenoh/debian-repo/ /" >> /etc/apt/sources.list 
+apt update
+apt install -y rsyslog curl nano iputils-ping ros-humble-demo-nodes-cpp zenoh-bridge-ros2dds zenoh-backend-filesystem python3-pip python3-venv ros-humble-turtlesim tmate
+apt clean 
+rm -rf /var/lib/apt/lists/*
+EOF
+
+
 
 # Create a non-root user called "developer" with sudo privileges
 RUN <<EOF
