--- a/.scripts/config/zenoh/edge.json5
+++ b/.scripts/config/zenoh/edge.json5
@@ -28,7 +28,7 @@
       ////
       //// domain: The DDS Domain ID. By default set to 0, or to "$ROS_DOMAIN_ID" is this environment variable is defined.
       ////
-      domain: 0,
+      domain: 3,
 
       ////
       //// ros_localhost_only: If set to true, the DDS discovery and traffic will occur only on the localhost interface (127.0.0.1).
@@ -52,14 +52,14 @@
       ////               or is not specified at all, it means that NO such interface is allowed.
       ////               Use 'deny' to allow all except the specified interfaces. If an interface type is set to an empty list
       ////               or is not specified at all, it means that ALL such interface are allowed.
-      // allow: {
-      //   publishers: [".*/laser_scan", "/tf", ".*/pose"],
-      //   subscribers: [".*/cmd_vel"],
-      //   service_servers: [".*/.*_parameters"],
-      //   service_clients: [],
-      //   action_servers: [".*/rotate_absolute"],
-      //   action_clients: [],
-      // },
+      allow: {
+        publishers: [".*/laser_scan", "/tf", ".*/pose", "/chatter"],
+        subscribers: [".*/cmd_vel"],
+        service_servers: [".*/.*_parameters"],
+        service_clients: [],
+        action_servers: [".*/rotate_absolute"],
+        action_clients: [],
+      },
       // deny: {
       //   publishers: ["/rosout", "/parameter_events"],
       //   subscribers: ["/rosout"],
