--- a/.devcontainer/ros2/devcontainer.json
+++ b/.devcontainer/ros2/devcontainer.json
@@ -8,7 +8,9 @@
 
 	"shutdownAction": "stopCompose",
 	"workspaceFolder": "/workspace",
-
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
+	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
