Add .env templates

--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -2,9 +2,10 @@ services:
   ros-dev:
     # image: rishikesavanramesh/ros2-dev # change this to your docker image
     # image: localhost/ros2_ros-dev # change this to your docker image
-    build: .
-    env_file:
-      - ../.env
+    build: 
+      context: .
+      args:
+        - ROS_DISTRO=${ROS_DISTRO}
     volumes:
       - ../../.:/workspace/.:rw
 
